[package]
name = "zmq_msg_struct"
version = "0.1.0"
authors = ["Daniel Orf <dorf@suse.com>"]
edition = "2018"

[dependencies]
zmq = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_cbor = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
vendored-zmq = ['zmq/vendored']
